[project]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Samir Ansari",email = "samiransari@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.1.6",
    "yfinance>=0.2.35",
    "vaderSentiment>=3.3.2",
    "pandas>=2.1.0"
]

[tool.peotry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



